chore: adjust responsive ui styling to fix all on mobile

--- a/src/app/converter/converter.component.scss
+++ b/src/app/converter/converter.component.scss
@@ -31,8 +31,9 @@ input[type='text'] {
     grid-gap: 10px;
     padding: 10px;
 
-    @media screen and (min-width: 640px) {
-        max-width: 200px;
+    @media screen and (max-width: 640px) {
+        height: calc(90vh - 10px);
+        width: 91vw;
         margin: 0 auto;
     }
 }
